Some fixed subtle-pixel padding, for more luxurious rendering on mobile phones: the text is not stuck on the screen borders any more, but the dotted separation lines are. A detail I find very elegant.

--- a/oneflow/core/static/sass/_home.scss
+++ b/oneflow/core/static/sass/_home.scss
@@ -184,6 +184,8 @@ header {
 
 #read {
     .article-number {
+        padding: 0 10px;
+
         h2 small {
             margin-left: 0;
         }
@@ -251,11 +253,16 @@ header {
 .read-list-row {
 
     .article {
-        padding: 5px 0;
-
+        padding: 5px 10px;
         border-bottom: 1px dotted #ddd;
 
-        /* START bring the body color here for the flash_fade() to work. */
+        /*
+            START flash_fade():
+            bring the body color here
+            for the flash_fade() to work.
+
+            Thus, we need to reset the H* colors.
+        */
 
         color: #29323d;
 
